Closed Bug 171260 Opened 22 years ago Closed 22 years ago

typeahead find in a page with frames wrecks normal find

Categories

(SeaMonkey :: Find In Page, defect, P1)

defect

Tracking

(Not tracked)

VERIFIED FIXED
mozilla1.2beta

People

(Reporter: deanis74, Assigned: aaronlev)

References

()

Details

Attachments

(1 file, 1 obsolete file)

1. Go to a page with frames (eg. www.generalcofee.com)
2. Type-ahead find for something simple that appears more than once in the page,
like 'e' (I search all text by default).
3. Ctrl+F
4. Type in junk (eg. 'asdasdaasd')
5. Hit Find

Expected Results: junk text not found

Actual Results: next occurrance of 'e' is found
Ugh, that's wrong.

Taking.
Blocks: isearch
Status: NEW → ASSIGNED
Priority: -- → P1
Target Milestone: --- → mozilla1.2beta
I've got 2002082508 at home and it doesn't seem to exhibit this behavior.  I
notice with this build that the typeahead find stops as soon as the find dialog
opens.  With the build from sept 27 that exhibits this bug, the typeahead find
stays active and times out normally after the dialog displays.
This bug, and bug 171079 are both regressions from my checkin to bug 167921. I
changed the way typeaheadfind detects where a nsIWebBrowserFind::FindNext() is
for normal find or for typeaheadfind. That check isn't working correctly (the
broken code is in nsTypeAheadFind::FindNext)
So is the call to GetWebBrowserFind failing, so typeaheadfind doesn't see the
Find dialog?
No, I don't think so -- but I'll have to investigate more.
This was fixed with the checkin to bug 168281.
Status: ASSIGNED → RESOLVED
Closed: 22 years ago
Resolution: --- → FIXED
tested on win2k and linux rh7.2 with 2002.10.22.08 comm trunk builds.

i think this still might be broken.

the orginal test case works fine, but i modified it a bit: after step 2, i did
find again using F3 (somehow accel-G doesn't exhibit this). then, after
following the remaining steps, the Find dlg still found 'e', rather than
returning an error for junk text not found.

should this be reopened, or should i spin off another bug?
Yeah, there still is a bug here.

nsTypeAheadFind::FindNext() is supposed to see there's a new different find
string, but it still sees the old one.
Status: RESOLVED → REOPENED
Resolution: FIXED → ---
Depends on: 175321
Comment on attachment 104539 [details] [diff] [review]
Only change nsWebBrowserFind. The correct changes for nstypeaheadfind.cpp are in bug 175321

r=akkana
Attachment #104539 - Flags: review+
Blocks: 1.2
Comment on attachment 104539 [details] [diff] [review]
Only change nsWebBrowserFind. The correct changes for nstypeaheadfind.cpp are in bug 175321

sr=sfraser
Attachment #104539 - Flags: superreview+
Comment on attachment 104539 [details] [diff] [review]
Only change nsWebBrowserFind. The correct changes for nstypeaheadfind.cpp are in bug 175321

a=asa for checkin to 1.2 (on behalf of drivers)
Attachment #104539 - Flags: approval+
checked in
Status: REOPENED → RESOLVED
Closed: 22 years ago22 years ago
Resolution: --- → FIXED
vrfy'd fixed, with both tests in comment 0 and comment 7. tested with 2002.11.19
comm trunk bits.
Status: RESOLVED → VERIFIED
OS: Windows 2000 → All
Hardware: PC → All
Component: Keyboard: Navigation → Keyboard: Find as you Type
I think there was an error in this patch, carried over from copying the existing
code.

+    nsCOMPtr<nsIDOMWindow> rootFrame = do_QueryReferent(mRootSearchFrame);
+    NS_ENSURE_TRUE(searchFrame, NS_ERROR_NOT_INITIALIZED);

Shouldn't this be NS_ENSURE_TRUE(rootFrame, ...);
This typo's still there.  Aaron, it should be rootFrame instead of searchFrame.
Product: Core → SeaMonkey
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: