Bug 171260. Typeaheadfind in page with frames wrecks normal find. r=akkana, sr=sfraser. a=asa